# nvidia_hack

./: .env.example  .gitignore  HOW TO RUN.md  INTRODUCTION.md  README.md  SYNTHETIC_DATA.md  WORKFLOW.md  agents.md  package-lock.json  package.json  pyproject.toml
negotiation_memory/: memory_api.py  requirements.txt
satellite_traffic_api/: config.py  main.py
satellite_traffic_api/adapters/: __init__.py  base.py  celestrak.py  ground_station.py  noaa_space_weather.py  nrlmsise.py  propagator.py  scenario_adapter.py  spacetrack.py
satellite_traffic_api/aggregator/: __init__.py  context_builder.py
satellite_traffic_api/cache/: __init__.py  backend.py  memory_backend.py  redis_backend.py
satellite_traffic_api/ml/: collision_classifier.py
satellite_traffic_api/models/: __init__.py  atmosphere.py  conjunction.py  context.py  enriched_alert.py  ground_station.py  orbital.py  space_weather.py
satellite_traffic_api/routers/: __init__.py  conjunctions.py  context.py  ground_stations.py  negotiate.py  orbital.py  (+2 more)
scripts/: generate_scenario.py
sentinel_agent/: .gitignore  README.md  pyproject.toml  requirements.txt
sentinel_agent/scripts/: troubleshoot_api.sh
sentinel_agent/src/: negotiate_api.py
sentinel_agent/src/agents/: llm.py  negotiation_agent.py
sentinel_agent/src/api/: __init__.py  __main__.py  server.py  stream_events.py
sentinel_agent/src/memory/: client.py
sentinel_agent/src/models/: enriched.py  maneuver.py  negotiation.py  physics.py
sentinel_agent/src/physics_interface/: loader.py  mock.py  schema.py
sentinel_agent/src/protocol/: channel.py
sentinel_agent/src/simulation/: runner.py
sentinel_agent/tests/: test_models.py  test_negotiation_agent.py  test_protocol.py
(+27 files in other folders)
