[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satellite-traffic-api"
version = "0.1.0"
description = "Unified data API layer for agentic decentralized satellite traffic negotiation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "sgp4>=2.24",
    "skyfield>=1.49",
    "nrlmsise00>=0.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "redis[asyncio]>=5.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
